# agent-logging-system

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
agent_logging_system/: __init__.py  anomaly_detector.py  logging_agent.py  observation.py  recommendations.py  state_model.py
agent_logging_system/adapters/: __init__.py  aimap_adapter.py  base_adapter.py  orchestrator_adapter.py  warrant_adapter.py
docs/: operational-discipline-for-agentic-workflows.md
examples/: README.md  aimap_monitor.py  basic_multi_agent.py  orchestrator_integration.py  self_monitor.py  session_replay.py  warrant_integration.py
tests/: test_anomaly_detector.py  test_integration.py  test_logging_agent.py  test_observation.py  test_orchestrator_adapter.py  test_state_model.py
